Draft share movie page

--- a/app/views/home/_header_user.html.erb
+++ b/app/views/home/_header_user.html.erb
@@ -6,7 +6,7 @@
         <div class="col-6 my-auto text-end me-2">
           <span>Welcome someone@gmail.com</span>
         </div>
-        <button class="btn btn-outline-success col-3 me-2">Share a movie</button>
+        <a href="/share" class="btn btn-outline-success col-3 me-2" role="button">Share a movie</a>
         <a href="/" class="btn btn-outline-danger col-3 me-2" role="button">Logout</a>
       </form>
     </div>
