--- a/app/views/share/new.html.erb
+++ b/app/views/share/new.html.erb
@@ -1,4 +1,5 @@
-<%= render partial: "home/header_user" %>
+<%= render partial: "home/header" %>
+
 <main role="main" class="container px-5 my-2">
   <div class="row mt-5">
     <div class="col-8 offset-2">
