--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "home/header" %>
+<%= render partial: "shared/header" %>
 
 <main role="main" class="container px-5 my-2">
   <div class="row mt-5">
