--- a/app/views/videos/_video.html.erb
+++ b/app/views/videos/_video.html.erb
@@ -9,10 +9,18 @@
       <div class="col-6">
         <p><%= video.title %></p>
       </div>
-      <div class="col-6 text-end">
-        <button class="btn btn-outline-primary me-1">Like</button>
-        <button class="btn btn-outline-secondary">Dislike</button>
-      </div>
+      <% if user_signed_in? %>
+        <div class="col-6 text-end">
+          <% if is_up_reacted %>
+            <button class="btn btn-primary">Liked</button>
+          <% elsif is_down_reacted %>
+            <button class="btn btn-secondary">Disliked</button>
+          <% else %>
+            <button class="btn btn-outline-primary me-1">Like</button>
+            <button class="btn btn-outline-secondary">Dislike</button>
+          <% end %>
+        </div>
+      <% end %>
     </div>
     <p>Shared by: <%= video.user.email %></p>
   </div>
