--- a/app/views/videos/_video.html.erb
+++ b/app/views/videos/_video.html.erb
@@ -10,16 +10,7 @@
         <p><%= video.title %></p>
       </div>
       <% if user_signed_in? %>
-        <div class="col-6 text-end">
-          <% if is_up_reacted %>
-            <button class="btn btn-primary">Liked</button>
-          <% elsif is_down_reacted %>
-            <button class="btn btn-secondary">Disliked</button>
-          <% else %>
-            <button class="btn btn-outline-primary me-1">Like</button>
-            <button class="btn btn-outline-secondary">Dislike</button>
-          <% end %>
-        </div>
+        <%= render "video_reaction", video: video, is_up_reacted: is_up_reacted, is_down_reacted: is_down_reacted %>
       <% end %>
     </div>
     <p>Shared by: <%= video.user.email %></p>
