--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,11 +1,7 @@
 <%= render partial: "shared/header" %>
-<% up_reaction_video_ids = @grouped_reaction_video_ids&.dig("up") %>
-<% down_reaction_video_ids = @grouped_reaction_video_ids&.dig("down") %>
 
 <main role="main" class="container px-5">
   <% @videos.each do |video| %>
-    <%= render partial: "video", locals: { video: video,
-      is_up_reacted: up_reaction_video_ids&.include?(video.id),
-      is_down_reacted: down_reaction_video_ids&.include?(video.id) } %>
+    <%= render partial: "video", locals: { video: video, video_reaction: @grouped_video_reactions&.dig(video.id)&.first} %>
   <% end %>
 </main>
