--- a/app/views/videos/_video_reaction.html.erb
+++ b/app/views/videos/_video_reaction.html.erb
@@ -1,10 +1,10 @@
 <%= tag.div class: "col-6 text-end", id: "#{dom_id(video)}_reaction" do %>
-  <% if is_up_reacted %>
-    <%= link_to "Liked", "#", class: "btn btn-primary" %>
-  <% elsif is_down_reacted %>
-    <%= link_to "Disliked", "#", class: "btn btn-secondary" %>
-  <% else %>
-    <%= link_to "Like", "#", class: "btn btn-outline-primary me-1" %>
-    <%= link_to "Dislike", "#", class: "btn btn-outline-secondary" %>
+  <% if video_reaction.blank? %>
+    <%= link_to "Like", video_reactions_path(video_id: video.id, reaction_type: :up), data: {turbo_method: :post}, class: "btn btn-outline-primary me-1" %>
+    <%= link_to "Dislike", video_reactions_path(video_id: video.id, reaction_type: :down), data: {turbo_method: :post}, class: "btn btn-outline-secondary" %>
+  <% elsif video_reaction.up? %>
+    <%= link_to "Liked", video_reaction_path(video_reaction), data: {turbo_method: :delete}, class: "btn btn-primary" %>
+  <% elsif video_reaction.down? %>
+    <%= link_to "Disliked", video_reaction_path(video_reaction), data: {turbo_method: :delete}, class: "btn btn-secondary" %>
   <% end %>
 <% end %>
