--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: "shared/header" %>
 
 <main role="main" class="container px-5">
+  <%= turbo_stream_from "videos" %>
   <% @videos.each do |video| %>
     <%= render partial: "video", locals: { video: video, video_reaction: @grouped_video_reactions&.dig(video.id)&.first} %>
   <% end %>
